# homework

./: .gitignore  CMakeLists.txt
project01/: CMakeLists.txt  hellowold.i  helloworld.cpp
project02/: CMakeLists.txt
src/: colorPicker.cpp  example.cpp  example02.cpp  faceTest.cpp  firstTest.cpp  hand.cpp  numberPicker.cpp  second.cpp  second01.cpp  test01.cpp  test02.cpp  test03.cpp  test04.cpp
