cmake_minimum_required(VERSION 3.0)
project(test01)

find_package(OpenCV REQUIRED)

include_directories(${OpenCV_INCLUDE_DIRS})

add_executable(test01 src/test01.cpp)
add_executable(test02 src/test02.cpp) 
add_executable(test03 src/test03.cpp) 
add_executable(test04 src/test04.cpp) 
add_executable(colorPicker src/colorPicker.cpp) 
add_executable(firstTest src/firstTest.cpp) 
add_executable(faceTest src/faceTest.cpp) 
add_executable(second src/second.cpp) 
add_executable(second01 src/second01.cpp) 
add_executable(example src/example.cpp) 
add_executable(numberPicker src/numberPicker.cpp) 

target_link_libraries(test01 ${OpenCV_LIBS} )
target_link_libraries(test02 ${OpenCV_LIBS} )
target_link_libraries(test03 ${OpenCV_LIBS} )
target_link_libraries(test04 ${OpenCV_LIBS} )
target_link_libraries(colorPicker ${OpenCV_LIBS} )
target_link_libraries(firstTest ${OpenCV_LIBS} )
target_link_libraries(faceTest ${OpenCV_LIBS} )
target_link_libraries(second ${OpenCV_LIBS} )
target_link_libraries(second01 ${OpenCV_LIBS} )
target_link_libraries(example ${OpenCV_LIBS} )
target_link_libraries(numberPicker ${OpenCV_LIBS} )
